syntax = "proto3";
package Pylonstech.pylons.pylons;

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "pylons/item.proto";
import "pylons/recipe.proto";

message ItemRecord {
  string ID = 1;
  repeated DoubleKeyValue doubles = 2 [(gogoproto.nullable) = false];
  repeated LongKeyValue longs = 3 [(gogoproto.nullable) = false];
  repeated StringKeyValue strings = 4 [(gogoproto.nullable) = false];
}

message Execution {
  string creator = 1;
  string ID = 2;
  string nodeVersion = 3;
  int64 blockHeight = 4;
  repeated ItemRecord itemInputs = 5 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin coinOutputs = 6 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated string itemOutputIDs = 7;
  repeated string itemModifyOutputIDs = 8;
  Recipe recipe = 9 [(gogoproto.nullable) = false]; // we need this recipe stored since the referenced recipe could be updated while this execution is pending
}

